2015-07-07  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/Convert/Plaintext.pm (%index_style_commands): Add 'key'.
	* NEWS: Mention reduced text styles.

2015-07-07  Gavin Smith  <gavinsmith0123@gmail.com>

	* util/Makefile.am (EXTRA_DIST): Distribute TESTS, but not
	all the contents of the test subdirectory, as this makes it 
	possible for *.trs files to be be distributed.

2015-07-06  Gavin Smith  <gavinsmith0123@gmail.com>

	* util/Makefile.am (TESTS): Add variable.
	* util/tests/texi2dvi_helpversion.sh: Add test, based on 
	texindex/tests/ti-helpversion.sh.  Suggestion from Karl.

2015-07-06  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/t/test_utils.pl: Add directories containing XSParagraph 
	files to the module include path, so that running, e.g.,
	"perl -w t/80include.t" works.  Suggestion from Patrice.

2015-07-06  Gavin Smith  <gavinsmith0123@gmail.com>

	* doc/texinfo.texi (Inserting Quotation Marks): Narrow prototype 
	text for rightmost column.

2015-07-06  Gavin Smith  <gavinsmith0123@gmail.com>

	* doc/texinfo.texi: Change @t to @code, @command or @samp in 
	node names.

2015-07-05  Patrice Dumas  <pertusus@free.fr>

	* tp/Texinfo/Structuring.pm (_sort_index_entries,
	_sort_index_entries_in_letter): use 'index_at_command'
	to sort index entries when 'number' is not enough.  Report
	from Norbert Preining and Chris Lamb.
	* tp/t/09indices.t: add corresponding test case.

2015-07-05  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/Convert/Plaintext.pm
	(new_formatter): Set 'suppress_styles' on formatter object.
	(_node_line, _printindex_formatted): Pass 'suppress_styles' 
	option to line formatter.
	(%index_style_commands): New hash.
	(_convert) <command has styles>: If styles are suppressed, 
	suppress styles unless the command is in %index_style_commands, 
	or it was defined with @definfoenclose.
	<cross-reference command>: Suppress styles for converting node 
	name.
	<menu entry>: Suppress styles for node names.
